--- a/Lecture1/index.html
+++ b/Lecture1/index.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>About Me</h1>
+    <p>hii ! I am sanskruti Kabadi</p>
+    <hr>
+    <h2>Education</h2>
+    <h3>Bachelors</h3>
+    <p>Sinhgad Institute of <i>Technology</i> and Science Pune</p>
+    <h3>secondary </h3>
+    <p>Shri shiv chhatrapati vidyalaya ,junnar</p>
+    <h3>school</h3>
+    <p>KMVJ</p>
+    <hr>
+    <h2>HOBBIES</h2>
+    <p>Badminton</p>
+    <hr>
+    <h2>Projects</h2>
+    <h3>Newzify</h3>
+    <p>A real time news application</p>
+    <h3>Moodel</h3>
+    <p>Application for educational institutions to automate administrative and routine tasks to improvw management efficiency</p>
+ 
+</body>
+</html>
