--- a/Lecture1/index.html
+++ b/Lecture1/index.html
@@ -6,25 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>About Me</h1>
-    <p>hii ! I am sanskruti Kabadi</p>
-    <hr>
-    <h2>Education</h2>
-    <h3>Bachelors</h3>
-    <p>Sinhgad Institute of <i>Technology</i> and Science Pune</p>
-    <h3>secondary </h3>
-    <p>Shri shiv chhatrapati vidyalaya ,junnar</p>
-    <h3>school</h3>
-    <p>KMVJ</p>
-    <hr>
-    <h2>HOBBIES</h2>
-    <p>Badminton</p>
-    <hr>
-    <h2>Projects</h2>
-    <h3>Newzify</h3>
-    <p>A real time news application</p>
-    <h3>Moodel</h3>
-    <p>Application for educational institutions to automate administrative and routine tasks to improvw management efficiency</p>
- 
+    <h1>Delish Bites</h1>
+    <p>Welocme to our restaurant! Explore our tasty menu below.</p>
+    <h2>Starters</h2>
+    <p><b>Garlic Bread - </b>Crispy bread with garlic butter</p>
+    <p><b>Spring Rolls -</b> Fried rools stuffed with veggies</p>
+
+    <h2>Main Course</h2>
+    <p><b>Margherita Pizza - </b>Classy cheese and tommato</p>
+    <p><b>Panner Butter Masala -</b> Creamy tommato curry</p>
+    <h2>Drinks</h2>
+    <p><b>Mango Shake - </b>Fresh mango blended with milkr</p>
+    <p><b>Spring Rolls -</b> Fried rools stuffed with veggies</p>
+    <h2>Starters</h2>
+    <p><b>Garlic Bread - </b>Crispy bread with garlic butter</p>
+    <p><b>Spring Rolls -</b> Fried rools stuffed with veggies</p>
+
+
 </body>
 </html>
